Upgraded the website
Logo knxworkers at the top-left of the website + added french and portuguese. <not final!!>

--- a/index.html
+++ b/index.html
@@ -2,19 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>KNX-Communication-Analyser</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
 </head>
 <body>
+  <body>
+    <nav>
+      <li><a href="#/" title="English"><img class="emoji" src="https://github.githubassets.com/images/icons/emoji/unicode/1f1ec-1f1e7.png?v8" alt="en">  .English</a></li>
+      <li><a href="#/fr/" title="Français"><img class="emoji" src="https://github.githubassets.com/images/icons/emoji/unicode/1f1eb-1f1f7.png?v8" alt="fr">  .Français</a></li>
+      <li><a href="#/pt/" title="Português"><img class="emoji" src="https://github.githubassets.com/images/icons/emoji/unicode/1f1f5-1f1f9.png?v8" alt="pt">  .Português</a></li>
+    </nav>
+    <div id="app"></div>
+  </body>
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '',
-      repo: ''
-    }
+      repo: 'rzdhop/KNX-Communication-Analyser',
+      maxLevel: 3,
+      coverpage: false,
+      name: 'KNX Communication Analyzer',
+      themeColor: '#110970',
+      logo: '/assets/logo.png',
+    };
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
